Changed name and homepage

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angucomplete-alt",
+  "name": "angucomplete-alt-rl",
   "version": "3.0.0",
-  "homepage": "http://ghiden.github.io/angucomplete-alt/",
+  "homepage": "http://adrienplg.github.io/angucomplete-alt/",
   "authors": [
     "Hidenari Nozaki <hidenari@gmail.com>"
   ],
